src-tauri/log10.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
warning: unused import: `std::time::Duration`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:8:5
  |
8 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Interface`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:9:35
  |
9 | use windows::core::{ComInterface, Interface};
  |                                   ^^^^^^^^^

warning: unused import: `D3D11_USAGE_DEFAULT`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:20:27
   |
20 |     D3D11_TEXTURE2D_DESC, D3D11_USAGE_DEFAULT, D3D11_USAGE_DYNAMIC,
   |                           ^^^^^^^^^^^^^^^^^^^

warning: unused import: `DXGI_FORMAT_R8G8B8A8_UNORM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:23:64
   |
23 |     DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM, DXGI_FORMAT_R8G8B8A8_UNORM,
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `IDXGISwapChain`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:27:33
   |
27 |     IDXGIDevice, IDXGIFactory2, IDXGISwapChain, IDXGISwapChain1, DXGI_SCALING_NONE,
   |                                 ^^^^^^^^^^^^^^

warning: unused import: `s`
 --> src\infrastructure\windowsimpl\scaling\shader.rs:5:12
  |
5 |     core::{s, PCSTR},
  |            ^

warning: unused import: `crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:1:5
  |
1 | use crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `regex::Regex`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:3:5
  |
3 | use regex::Regex;
  |     ^^^^^^^^^^^^

warning: unused imports: `HashMap` and `HashSet`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:4:24
  |
4 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^  ^^^^^^^

error[E0609]: no field `window_manager` on type `&mut ScalingProcessor`
   --> src\infrastructure\windowsimpl\scaling\processor.rs:256:14
    |
256 |         self.window_manager = Some(window_manager);
    |              ^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
256 |         self._window_manager = Some(window_manager);
    |              +

For more information about this error, try `rustc --explain E0609`.
warning: `launcherg` (bin "launcherg") generated 9 warnings
error: could not compile `launcherg` (bin "launcherg") due to 1 previous error; 9 warnings emitted
